syntax = "proto3";
package apiservice;

option go_package = "protobuf/apiservice";

service CommonService {
  rpc ListSubscribedChannels(ListSubscribedChannelsRequest) returns (ListSubscribedChannelsResponse);
  rpc Ping(PingRequest) returns (PingResponse);
}

message PingRequest {
}

message PingResponse {
}

message ListSubscribedChannelsRequest {
}

message ListSubscribedChannelsResponse {
  repeated Channel channels = 1;
}

message Channel {
  string id = 1;
  string name = 2;
}

